--- a/.github/.github/workflows/build.yml
+++ b/.github/.github/workflows/build.yml
@@ -1,1 +1,31 @@
 
+name: Build VEH Patch DLL
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+jobs:
+  build:
+    runs-on: windows-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Install Visual Studio Build Tools
+      uses: microsoft/setup-msbuild@v1
+
+    - name: Configure CMake
+      run: cmake -B build -S .
+
+    - name: Build DLL (x64)
+      run: cmake --build build --config Release
+
+    - name: Upload DLL artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: veh_patch_x64
+        path: build/Release/*.dll
